# EDA_Challenge

./: .gitignore  CMakeLists.txt  Configure  Doxygen.cfg  MemoryStatictic  README.md  README_CN.md  gitversion.cmake  main.cc
.github/workflows/: blank.yml  build.yml  test.yml
docs/: annotated.html  annotated_dup.js  class_c_l_i_parser-members.html  class_c_l_i_parser.html  class_c_l_i_parser.js  class_c_s_v_parser-members.html  class_c_s_v_parser.html  class_c_s_v_parser.js  class_misc_feat-members.html  class_misc_feat.html  class_misc_feat.js  class_v_c_d_parser-members.html  class_v_c_d_parser.html  class_v_c_d_parser.js  classes.html  cli__parser_8cc.html  cli__parser_8cc_source.html  cli__parser_8h.html  cli__parser_8h.js  cli__parser_8h_source.html  csv__parser_8cc.html  csv__parser_8cc.js  csv__parser_8cc_source.html  csv__parser_8h.html  csv__parser_8h.js  csv__parser_8h_source.html  dir_572890c148f68441e050f6560d78312b.html  dir_572890c148f68441e050f6560d78312b.js  dir_e8522150b400a43ebfdbd1fed060b8e2.html  dir_e8522150b400a43ebfdbd1fed060b8e2.js  files.html  files_dup.js  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  globals_vars.html  index.html  index.md  (+41 more)
docs/search/: all_0.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_c.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_5.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  pages_0.js  searchdata.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js  variables_7.js  variables_9.js  variables_a.js  variables_b.js  (+3 more)
gui/: .gitignore  aboutwindow.cc  aboutwindow.h  aboutwindow.ui  gresource.xml  gui.cc  gui.h  mainwindow.cc  mainwindow.h  mainwindow.ui
parser/: cli_parser.cc  cli_parser.h  csv_parser.cc  csv_parser.h  parser.cc  parser.h  vcd_parser.cc  vcd_parser.h  vcd_parser_glitch.cc
script/: configure  main.py  memory_statistic  performance_test.py  requirements.txt  wrapping
script/require/: EDA_Challenge.desktop  control  postinst  postrm
system/: misc_feat.cc  misc_feat.h  robin_hash.h  system.cc  system.h
tclap/: CmdLine.h  StdOutput.h  ValueArg.h
test/: parser_test.cc  regresstion_test.cc  template.cc  unit_test.cc
